--- a/www/css/form.css
+++ b/www/css/form.css
@@ -43,7 +43,7 @@ td.error {color: #FF0000}
 span.error {color: #FF0000}
 
 table.disptable { border-collapse: collapse; border: 1px solid #afaeb2;}
-table.disptable td{ padding:2px; border: 1px solid #afaeb2; vertical-align: middle;}
+table.disptable td{ padding:2px; border: 1px solid #afaeb2; vertical-align: middle; text-align:center}
 table.disptable th{ font-weight:bold; padding:2px; text-align:center; border: 1px solid #afaeb2; vertical-align: middle;}
 
 /* buttons */
@@ -59,7 +59,8 @@ a.addbtn {cursor: pointer; float: right; display:block; width: 13px; height:13px
 a.savebtn {cursor: pointer; margin-left: 5px; float: right; display:block; width: 16px; height:16px; background: url(../skule_images/save.gif);}
 a.refreshbtn {cursor: pointer; margin-left: 5px; float: right; display:block; width: 15px; height: 16px; background: url(../skule_images/refresh.gif);}
 
-a.findbtn {cursor: pointer; float: right; display:block; width: 16px; height:16px; background: url(../skule_images/find.png);}
+a.findbtn {cursor: pointer; display:block; position:relative;width: 16px; height:16px; background: url(../skule_images/find.png);}
+
 
 input.fbuttons{
 	font-size: 10pt;
