--- a/www/css/main.css
+++ b/www/css/main.css
@@ -54,7 +54,7 @@ div.critique_block div.box div.title_bar {
 	padding-left: 5px;
 }
 
-div.exam_block { display: none; margin:5px 0 5px 0;overflow:auto;max-height:200px;border:solid #5970B2 1px;width:380px }
+div.exam_block { margin:5px 0 5px 0;overflow:auto;max-height:250px;border:solid #5970B2 1px;width:380px }
 
 #submenu
 {
